fix | global.css: h2 accidently added extra margin on top

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -19,7 +19,7 @@ h1 {
 }
 
 h2 {
-  @apply mt-6 text-xl font-bold;
+  @apply text-xl font-bold;
 }
 
 h3 {
